--- a/index.html
+++ b/index.html
@@ -5,7 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body> 
+   <h1>Your Name</h1> 
+   <div class="personal_info">
+    <p>Address:36-2-11</p>
+    <p>
+        Phone:9676819804<br>
+        Email:suhasmsahay@gmail.com
+        LinkedIn:Suhas
+        GitHutb:SanDSora
+    </p>
+   </div>
+   <div class="education-section">
+    <h2>Education Section</h2>
+    <h4>
+        B.Tech CSE CGPA:9.54
+    </h4>
+    <p>KLU:Guntur</p>
+   </div>
+   <div>
+    <h2>Work Experience</h2>
+    <h4>BeingZero</h4>
+    <p>
+        <ul>
+            <li>Failed all the interviews</li>
+            <li>Failed all the teching sessions.</li>
+        </ul>
+    </p>
+   </div>
 </body>
 </html>
